alignment in contact us fixed

--- a/src/loc/Loc.css
+++ b/src/loc/Loc.css
@@ -15,7 +15,7 @@
   font-size: 2rem;
   color: #001019;
   padding-top: 5%;
-  color:  #FFFFFF;
+  color: #ffffff;
   padding-right: 20%;
 }
 
@@ -24,7 +24,7 @@
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
-  color:  #FFFFFF;
+  color: #ffffff;
   padding-top: 25px;
   /* padding-left: 5%; */
   padding-right: 20%;
@@ -38,16 +38,15 @@
   height: 300px;
   width: 379px;
   border-radius: 5%;
-  border: 40px solid #011B29;
+  border: 40px solid #011b29;
   /* filter: drop-shadow(4px 4px 20px rgba(55, 112, 255, 0.12)); */
 }
 
- @media (max-width: 444px) {
+@media (max-width: 444px) {
   .splide__slide img {
     height: 100% !important;
     width: 74% !important;
   }
-
 }
 
 @media (max-width: 768px) {
@@ -60,7 +59,7 @@
     padding-right: 5%;
     font-size: 0.8rem;
   }
-} 
+}
 
 /* hero */
 .heroHeading {
@@ -97,41 +96,41 @@
 }
 
 .goldSponsors {
-  color: #FBC778;
+  color: #fbc778;
   font-size: 2rem;
 }
 
 .silverSponsors {
-  color: #C5C5C5;
+  color: #c5c5c5;
   margin: 2%;
   font-size: 2rem;
 }
 
-.goodies{
+.goodies {
   font-size: 24px;
   padding-bottom: 40px;
 }
 
 @media (max-width: 800px) {
-  .goodies{
+  .goodies {
     font-size: 15px;
   }
 }
 
-@media (min-width: 600px){
-  .Prizes2{
+@media (min-width: 600px) {
+  .Prizes2 {
     display: none;
   }
 }
 
 @media (max-width: 650px) {
-  .Prizes1{
+  .Prizes1 {
     display: none;
   }
-  .goodies{
+  .goodies {
     font-size: 12px;
   }
-  .heroHeading{
+  .heroHeading {
     font-size: 4.2rem;
   }
   .heroContent {
@@ -178,14 +177,14 @@ h3 {
   font-size: 1rem;
 }
 
-.balls{
+.balls {
   padding: 2px;
-  background-color: #36B8EF !important;
+  background-color: #36b8ef !important;
   border-radius: 50%;
   width: 40px;
   height: 40px;
-  display: flex; 
-  justify-content: center; 
+  display: flex;
+  justify-content: center;
   align-items: center;
   font-weight: bold;
 }
@@ -249,14 +248,14 @@ h3 {
 } */
 
 @media screen and (max-width: 500px) {
-  .timeStamps p{
+  .timeStamps p {
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 10px;
   }
-  .balls{
+  .balls {
     width: 30px;
     height: 30px;
   }
@@ -298,7 +297,7 @@ h3 {
 }
 /* guideline */
 .guidelines {
-  border-image: linear-gradient(179.94deg, #34BDF3 -1.24%, #585BA8 64.13%);
+  border-image: linear-gradient(179.94deg, #34bdf3 -1.24%, #585ba8 64.13%);
   border-style: solid;
   border-width: 8px;
   border-image-slice: 1;
@@ -323,7 +322,7 @@ h3 {
   -webkit-text-fill-color: transparent;
   background-clip: text;
   -webkit-background-clip: text;
-  background-image: linear-gradient(179.94deg, #34BDF3 -1.24%, #585BA8 64.13%);
+  background-image: linear-gradient(179.94deg, #34bdf3 -1.24%, #585ba8 64.13%);
   transform: translateY(-27px) translateX(22.5px);
 }
 .guideContain {
@@ -379,8 +378,6 @@ h3 {
     font-size: 1rem;
   }
 }
-
-
 
 @media (max-width: 430px) {
   .countDownSize {
@@ -578,7 +575,7 @@ h3 {
 }
 
 .backTop {
-  animation: top .8s infinite;
+  animation: top 0.8s infinite;
 }
 
 @keyframes top {
@@ -590,13 +587,13 @@ h3 {
   }
 }
 
-/* FAQ */ 
+/* FAQ */
 .MuiAccordion-root {
-  background-color:#001522 !important;
+  background-color: #001522 !important;
 }
 
 /* loc footer */
-.locNav p{
+.locNav p {
   text-transform: uppercase;
   font-weight: 700;
   font-family: Montserrat;
@@ -604,33 +601,39 @@ h3 {
   padding: 13% 5% 8% 0%;
 }
 
-.locationData{
+.locationData {
   font-size: 1rem;
   font-family: Montserrat;
   padding: 0% 6%;
   font-weight: 400;
 }
-.aboutFooter{
-  font-size: .8rem;
+.aboutFooter {
+  font-size: 0.8rem;
   font-family: Montserrat;
   padding: 0% 6%;
   font-weight: 400;
 }
-.locationMail{
+.locationMail {
   font-weight: 600;
   font-size: 1rem;
   font-family: Montserrat;
   padding: 3%;
 }
 
-.locNav a{
+.locNav a {
   text-decoration: none;
   color: white;
   font-size: 1.7rem;
   padding: 2%;
 }
 
-.locLinkFooter{
-font-size: .9rem;
-padding: 0;
+.locLinkFooter {
+  font-size: 0.9rem;
+  padding: 0;
+}
+
+@media (max-width: 500px) {
+  .contactHeading {
+    margin-left: -80px !important;
+  }
 }
